fix: issues of github copilot
