# domain/api.go
@@ -3,13 +3,12 @@ package domain
 import "time"
 
 type UniversityResponse struct {
-	NumUniv  int    `json:"numUniv"`
+	Id       int    `json:"id"`
 	NameUniv string `json:"nameUniv"`
 	AdeUniv  string `json:"adeUniv"`
 }
 
 type TimetableResponse struct {
-	NumUniv      int       `json:"numUniv"`
 	NameUniv     string    `json:"nameUniv"`
 	DescTT       string    `json:"descTT"`
 	NumYearTT    int       `json:"numYearTT"`
